src/objects/POHeader__c.object
<CustomObject>
    <fields>
        <fullName>ActionFlag__c</fullName>
        <label>Action Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>PurchaseOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancelFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CarryingOutOrganizationOUID__c</fullName>
        <formula>Project__r.OUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarryingOutOrganizationOrgId__c</fullName>
        <formula>Project__r.CarryingOutOrganization__r.OrgID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarryingOutOrganization__c</fullName>
        <formula>Project__r.CarryingOutOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegateProject__c</fullName>
        <formula>Project__c</formula>
        <label>Delegate Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFPOId__c</fullName>
        <formula>VALUE(SUBSTITUTE( Name , &apos;PO-&apos;, &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FF PO Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoicePaid__c</fullName>
        <label>Invoice Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUID__c</fullName>
        <formula>Project__r.CarryingOutOrganization__r.OUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePaymentTermId__c</fullName>
        <formula>CASE( TEXT( PaymentTerm__c ) , 
&apos;NET 30 DAYS&apos;, &apos;10000&apos;,
&apos;Pay When Paid&apos;, &apos;10001&apos;, 
&apos;Immediate&apos;, &apos;10002&apos;, 
&apos;Pay When Paid Partial&apos;, &apos;10163&apos;, 
&apos;NET 10 DAYS&apos;, &apos;10020&apos;,
&apos;NET 15 DAYS&apos;, &apos;10021&apos;,
&apos;NET 5 YEARS&apos;, &apos;10022&apos;,
&apos;NET 90 DAYS&apos;, &apos;10023&apos;,
&apos;NET 120 DAYS&apos;, &apos;10024&apos;,
&apos;NET 45 DAYS&apos;, &apos;10043&apos;,
&apos;NET 60 DAYS&apos;, &apos;10044&apos;,
&apos;NET 7 DAYS&apos;, &apos;10063&apos;,
&apos;NET 14 DAYS&apos;, &apos;10064&apos;,
&apos;NET 20 DAYS&apos;, &apos;10065&apos;,
&apos;NET 55 DAYS&apos;, &apos;10103&apos;,
&apos;Extended Terms&apos;, &apos;10123&apos;,
&apos;20 FOL&apos;, &apos;10083&apos;,
&apos;NET 85 DAYS&apos;, &apos;10143&apos;,
&apos;5/14 NET 30 DAYS&apos;, &apos;10183&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Payment Term Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePersonId__c</fullName>
        <formula>Requestor__r.pse__Salesforce_User__r.PersonId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OraclePersonId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePurchaseOrderId__c</fullName>
        <description>Oracle Id for purchase order obtained after initial sync with oracle</description>
        <externalId>true</externalId>
        <label>Oracle Purchase Order Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePurchaseOrderNumber__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Purchase Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OracleVendorId__c</fullName>
        <formula>VendorSite__r.Site__r.Account__r.OracleVendorID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Vendor Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleVendorNumber__c</fullName>
        <formula>VendorSite__r.Site__r.Account__r.OracleVendorNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Vendor Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleVendorSiteId__c</fullName>
        <formula>VendorSite__r.Site__r.VendorSiteID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Vendor Site Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PODate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POType__c</fullName>
        <label>PO Type</label>
        <picklist>
            <picklistValues>
                <fullName>STANDARD</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <picklist>
            <picklistValues>
                <fullName>NET 30 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay When Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay When Paid Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 10 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 15 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 5 YEARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 90 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 120 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 45 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 60 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 7 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 14 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 20 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 55 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 FOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 85 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/14 NET 30 DAYS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PurchaseOrdersProjectManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Site</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>POHeadersProject</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderIdNumber__c</fullName>
        <formula>VALUE(SUBSTITUTE( Name , &apos;PO-&apos;, &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Order Id Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestorOracleId__c</fullName>
        <formula>Requestor__r.User__r.PersonId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Oracle Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDCVendorNumber__c</fullName>
        <formula>ProjectSite__r.Site__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Vendor Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>APPROVED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>POLineItem__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>POLineItem__c.CancelFlag__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>POLineItem__c.POHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VendorName__c</fullName>
        <formula>VendorSite__r.AccountName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>VendorSite__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Agreement__c</columns>
        <columns>PODate__c</columns>
        <columns>POType__c</columns>
        <columns>Requestor__c</columns>
        <columns>Status__c</columns>
        <columns>Total__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ProjectManager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>